fix showing screenshot by using relative path

--- a/index.html
+++ b/index.html
@@ -658,8 +658,8 @@ tbody tr:hover{
 -->
         <div id="mirrorlinks">
             <h3>使用截图</h3>
-            <a target="_blank" href="/img/snapshot1.png"><img src="/img/snapshot1.png" title="Fedora 22 beautiful face" alt="Fedora 22 桌面" width="60%"/></a>
-            <a target="_blank" href="/img/snapshot2.png"><img src="/img/snapshot2.png" title="Youdao Dictionary" alt="有道词典" width="60%"/></a>
+            <a target="_blank" href="img/snapshot1.png"><img src="img/snapshot1.png" title="Fedora 22 beautiful face" alt="Fedora 22 桌面" width="60%"/></a>
+            <a target="_blank" href="img/snapshot2.png"><img src="img/snapshot2.png" title="Youdao Dictionary" alt="有道词典" width="60%"/></a>
         </div>
     </div>
     <div mce_style="clear: both;" style="clear: both;"></div>
