index.html: fix link name
点开链接之后是 free/, nonfree/ 等，说成“按版本浏览”不太合适。

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ tbody tr:hover{
 <div id="wrapper">
     <div id="filelist">
         <h3 style="clear:left; display: inline-block;">软件包列表</h3>
-        <a style="float:right;" href="//repo.fdzh.org/FZUG">按 Fedora 版本浏览</a>
+        <a style="float:right;" href="//repo.fdzh.org/FZUG">浏览软件仓库</a>
         <hr />
         <table cellspacing="0" cellpadding="0" class="filelist">
             <thead>
