index.html: fix meta info

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" lang="zh-CN" prefix="og: http://ogp.me/ns#">
     <head>
         <meta charset="utf-8"/>
-        <meta name="Author" content="Fedora Zh User Group"/>
-        <meta name="Description" content="Fedora 中文用户组（FZUG）创建并维护此社区源，本源提供中文用户常用软件包。"/>
+        <meta name="Author" content="Fedora Zhongwen User Group (FZUG)"/>
+        <meta name="Description" content="Fedora 中文用户组 (FZUG) 创建并维护此社区源，提供中文用户常用软件包。"/>
         <title>Fedora中文社区软件源</title>
 
         <style type="text/css">
