index.html: remove elevator.js related code
The link gives 404, and it seems unnecessary to use it anyway.

--- a/index.html
+++ b/index.html
@@ -337,7 +337,6 @@ tbody tr:hover{
         </style>
 
 
-<script src="http://7o51u6.com1.z0.glb.clouddn.com/elevator.js"></script>
     </head>
 
     <body> <!-- body start -->
@@ -670,21 +669,9 @@ tbody tr:hover{
     </div>
 </div>
 
-<div class="elevator-button" id="back-top" style="display: block;">
+<div id="back-top" style="display: block;">
   <a alt="返回顶部" title="返回顶部" href="#">↑</a>
 </div>
-
-<script>
-// Elevator script included on the page, already.
-
-window.onload = function() {
-  var elevator = new Elevator({
-    element: document.querySelector('.elevator-button'),
-    mainAudio: '//dn-copr.qbox.me/elevator.mp3',
-    endAudio: '//dn-copr.qbox.me/ding.mp3'
-  });
-}
-</script>
     </body> <!-- body end -->
 <!-- Designed by Miaomiao Li. It's a wonderful life! -->
 <!--
