index.html: update footer bg/fg color
This update makes the footer consistent with the main website.
It also fixes the display issue of the 'Back to Top' button when we
nagivate to the bottom of the page.

--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@ tbody tr:hover{
 	background-color:#3c6eb4;
 }
 #footer{
-	background-color: #333;
-	color:#bbb;
+	background-color: #dedede; /* Fedora lightgrey */
 	padding:30px 0;
 }
 #footercontent{
@@ -219,7 +218,8 @@ tbody tr:hover{
 	line-height: 1.5em;
 }
 #footerleft a{
-	color:#ccc;
+	color:#06c;
+    text-decoration: none;
 }
 #footerright{
 	width:33%;
