index.html: fix footer text and add missing image

--- a/index.html
+++ b/index.html
@@ -660,9 +660,9 @@ tbody tr:hover{
 
         <div id="footerleft">
             <p>Fedora 中文社区 (FZUG) 由世界各地讲中文的 Fedora 爱好者组成。点击了解中文社区<a href="//github.com/FZUG">开源项目</a>与<a href="//fedoraproject.org/wiki/FZUGCommunicate">沟通方式</a>。</p>
-            <p>本软件源由 <a href="//www.ucloud.cn/?ref=fdzh.org" target="_blank" data-original-title="服务器由 UCloud 赞助"><img height="10%" width="15%" src="/img/ucloud.png" alt="UCloud"></a> 提供服务器资源赞助，由 <a href="http://www.qiniu.com/?ref=fdzh.org" target="_blank" data-original-title="QINIU CDN"><img height="10%" width="15%" src="/img/qiniu-125x55.png" alt="QINIU"></a> 提供 CDN 服务支持。<!--www.b1.qiniudn.com/images/logo-3.png--></p>
+            <p>本软件源由 <a href="//www.ucloud.cn/?ref=fdzh.org" target="_blank" data-original-title="服务器由 UCloud 赞助"><img height="10%" width="15%" src="img/ucloud.png" alt="UCloud"></a> 提供服务器资源赞助，由 <a href="http://www.qiniu.com/?ref=fdzh.org" target="_blank" data-original-title="QINIU CDN"><img height="10%" width="15%" src="img/qiniu-125x55.png" alt="QINIU"></a> 提供 CDN 服务支持。<!--www.b1.qiniudn.com/images/logo-3.png--></p>
             <p>本网站主题在 <a href="//moeka.me" target="_blank">Miaomiao Li</a> 设计的 <a href="//mirrors.ustc.edu.cn/">USTC 开源镜像站主页</a>基础上定制而成。</p>
-            <p>Copyright &copy; 2015 FZUG</p>
+            <p>Copyright &copy; 2015, 2018 FZUG</p>
         </div>
 
         <div mce_style="clear: both;" style="clear: both;"></div>
