index.html: fix header links

--- a/index.html
+++ b/index.html
@@ -174,13 +174,6 @@ tbody tr:hover{
     line-height: 1.5em;
     font-family: "Open Sans","Ubuntu","Hiragino Sans GB", "Wenquanyi Micro Hei", "WenQuanYi Micro Hei Mono", "WenQuanYi Zen Hei", "WenQuanYi Zen Hei", "Apple LiGothic Medium", "STXihei", "ST Heiti", "WenQuanYi Zen Hei Sharp";
 }
-#sidebar a{
-    color:#030303;
-    text-decoration: none;
-}
-#sidebar a:hover{
-    text-decoration: underline;
-}
 .btn{
     display: inline-block;
     background-color: #294172;
@@ -343,11 +336,9 @@ tbody tr:hover{
 
 <div id="header">
     <ul id="headlinks">
-        <li><a target="_blank" href="//www.fdzh.org">Home</a></li>
-        <li><a target="_blank" href="http://hack.fdzh.org">Hack</a></li>
-        <li><a target="_blank" href="//github.com/FZUG/repo/wiki">Wiki</a></li>
-        <li><a target="_blank" href="//github.com/FZUG/repo/issues">Issues</a></li>
-        <li><a target="_blank" href="//github.com/FZUG">About</a></li>
+        <li><a target="_blank" href="//zh.fedoracommunity.org">首页</a></li>
+        <li><a target="_blank" href="//zh.fedoracommunity.org/repo">软件源</a></li>
+        <li><a target="_blank" href="//zh.fedoracommunity.org/about">关于</a></li>
     </ul>
 </div>
 
@@ -650,6 +641,10 @@ tbody tr:hover{
             <h3>使用截图</h3>
             <a target="_blank" href="img/snapshot1.png"><img src="img/snapshot1.png" title="Fedora 22 beautiful face" alt="Fedora 22 桌面" width="60%"/></a>
             <a target="_blank" href="img/snapshot2.png"><img src="img/snapshot2.png" title="Youdao Dictionary" alt="有道词典" width="60%"/></a>
+        </div>
+        <div id="issues">
+            <h3>汇报问题</h3>
+            <a target="_blank" href="//github.com/FZUG/repo/issues">GitHub Issues</a>
         </div>
     </div>
     <div mce_style="clear: both;" style="clear: both;"></div>
