index.html: fix header texts
- remove intro in English

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body{
     font-weight:400;
     font-size:48px;
     margin-top:10px;
-    color:rgba(255, 255, 255, 0.1);
+    color:rgba(255, 255, 255, 0.618);
 }
 #intro h2{
     font-family: "Open Sans","Ubuntu",Helvetica, Arial, Geneva, sans-serif;
@@ -344,8 +344,7 @@ tbody tr:hover{
 
 <div id="welcome">
     <div id="intro">
-        <h1>Freedom. Friends. Features. First.</h1>
-        <h2>欢迎访问 Fedora 中文社区软件源</h2>
+        <h1>Fedora 中文社区软件源</h1>
         <p>Fedora 中文社区 (FZUG) 创建并维护此软件源，为 Fedora 中文用户提供更为丰富的软件包。</p>
     </div>
 </div>
